--- a/theme.cfg
+++ b/theme.cfg
@@ -1,1 +1,10 @@
-name: shaders
+name: Pulsar-theme
+author: Gonzalo Abbate for GNU/LINUX - WINDOWS
+homepage: https://github.com/ZagonAb/ShaderTheme
+summary: A simple theme with a small moving star shader.
+keywords: pathview, gridview,centered
+assets.screenshots:
+  .meta/screenshots/screen1.png
+  .meta/screenshots/screen2.png
+  .meta/screenshots/screen3.png
+  .meta/screenshots/screen4.png
