--- a/theme.cfg
+++ b/theme.cfg
@@ -1,6 +1,6 @@
-name: Pulsar-theme
+name: Pulsar-Theme
 author: Gonzalo Abbate for GNU/LINUX - WINDOWS
-homepage: https://github.com/ZagonAb/ShaderTheme
+homepage: https://github.com/ZagonAb/Pulsar-Theme
 summary: A simple theme with a small moving star shader.
 keywords: pathview, gridview,centered
 assets.screenshots:
